[package]
name = "steam_info"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/DianaNites/steam_info"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
raw-window-handle = "0.5.2"
libc = "0.2.144"
x11-clipboard = "0.7.1"

[dependencies.glutin]
version = "0.30.8"
default-features = false
features = [
    #
    "glx",
    "egl",
    # "wayland",
]

[dependencies.winit]
version = "0.28.6"
default-features = false
features = [
    #
    "x11",
    # "wayland",
]

[build-dependencies]
gl_generator = "0.14.0"
