[package]
name = "steam_info"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/DianaNites/steam_info"
publish = false

[dependencies]
anyhow = "1.0.71"
raw-window-handle = "0.5.2"
libc = "0.2.144"
x11-clipboard = "0.7.1"

[dependencies.glutin]
version = "0.30.8"
default-features = false
features = [
    #
    "glx",
    "egl",
    # "wayland",
]

[dependencies.winit]
version = "0.28.6"
default-features = false
features = [
    #
    "x11",
    # "wayland",
]

[build-dependencies]
gl_generator = "0.14.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
dist = true
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.7"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.69.0"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "aarch64-apple-darwin",
]
