[package]
name = "steam_info"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/DianaNites/steam_info"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.71"
raw-window-handle = "0.5.2"
libc = "0.2.144"
x11-clipboard = "0.7.1"

[dependencies.glutin]
version = "0.30.8"
default-features = false
features = [
    #
    "glx",
    "egl",
    # "wayland",
]

[dependencies.winit]
version = "0.28.6"
default-features = false
features = [
    #
    "x11",
    # "wayland",
]

[build-dependencies]
gl_generator = "0.14.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
dist = true
cargo-dist-version = "0.0.7"
rust-toolchain-version = "stable"
ci = ["github"]
installers = []
# Target platforms to build for
targets = ["x86_64-unknown-linux-gnu"]
